<resources>
    <string name="app_name">Noseplug</string>
    <string name="title_activity_report_form">Report Form</string>
    <string name="title_activity_odor_event_details">Odor Event Details</string>
    <string name="odor_type_prompt">Choose a type</string>
    <string name="submit_report">Submit</string>
    <string name="date_format">Date(MM/DD/YY)</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="report_comments">Any additional comments…</string>
    <string name="report_effect">This affects me in that…</string>
    <string name="odor_strength">Strength</string>
    <string name="odor_type">Odor Type</string>
    <string name="item_settings">Settings</string>
    <string name="item_help">Help</string>
    <string name="item_about">About</string>
    <string name="drawer_open">Open the navigation drawer.</string>
    <string name="drawer_close">Close the navigation drawer.</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password_requirement">Password(Must be at least length of 8)</string>
    <string name="retype_password">Retype Password</string>
    <string name="already_user">Already has account! Login here</string>
    <string name="register_new_account">Register New Account</string>
    <string name="email_to_reset">Please Enter Your Email</string>
    <string name="reset_pwd_email">Send Email to Reset Password</string>
    <string name="intent_extra_location">com.noseplugapp.android.Location</string>
    <string name="intent_extra_create_date">com.noseplugapp.android.CreateDate</string>
    <string name="intent_extra_report_date">com.noseplugapp.android.ReportDate</string>
    <string name="intent_extra_odor_event_id">com.noseplugapp.android.OdorEventId</string>
    <string name="intent_extra_odor_report_id">com.noseplugapp.android.OdorReportId</string>
    <string name="shared_preferences_noseplug">com.noseplugapp.android.SHARED_PREFERENCES</string>
    <string name="shared_preferences_newEventNotificationDistance">com.noseplugapp.android.newEventNotificationDistance</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>

</resources>
